--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity
-            android:name=".ImageActivity"
-            android:label="@string/title_activity_image"
-            android:theme="@style/NoActionBar"></activity>
+        <activity android:name=".ImageActivity"></activity>
         <activity android:name=".ScrollTestActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
